Carry fix for not showing bg-img on small screens into new class name

--- a/src/assets/custom/css/_sass/_tabber.scss
+++ b/src/assets/custom/css/_sass/_tabber.scss
@@ -156,6 +156,13 @@
 
 .tabber-panel__header {
   background-color: $navy;
-  background-position: center bottom 20px;
-  background-repeat: no-repeat;
+
+  @include small {
+    background-image: none !important;
+  }
+  @include medium-large-and-extra-large {
+    background-position: center bottom 20px;
+    background-repeat: no-repeat;
+  }
 }
+
